# kafka-dlp-streamshild

./: .gitignore  CLAUDE.md  README.md
poc/: 001_architecture-overview.md  002_detokenization-strategy.md  003_kafka-vs-fivetran-rationale.md  013_dlp-tokenization-poc.md  kafka-to-snowflake-approach-a.drawio
poc/setup-guides/: 01-project-setup.md  02-vpc-and-networking.md  03-iam-service-accounts.md  04-kafka-cluster.md  05-confluent-schema-registry.md  05a-kafka-schema-registry.md  06-secret-manager.md  07-gce-vm.md  08-kafka-topics.md  09-producer-consumer-scripts.md  10-snowflake-setup.md  11-dataflow-pipeline.md  11a-dataflow-pipeline.md  12-end-to-end-validation.md
poc/setup-guides/scripts/: README.md  consumer.py  producer.py  schema.py  utils.py
poc/setup-guides/scripts-dlp/: README.md  consumer_detokenized.py  consumer_tokenized.py  dlp_utils.py  generate_wrapped_dek.py  producer.py  register_schema.py  schema.py
streamshield/: CLAUDE.md  README.md  SDK_DOCUMENTATION.md  dev_help.md  pyproject.toml
streamshield/docs/: sdk-reference.md
streamshield/examples/: detokenized_consumer.py  gcs_consumer.py  generate_wrapped_dek.py  prescription_producer.py  register_schema.py  streamlit_consumer.py  streamlit_producer.py  streamshield-config.yaml  tokenized_consumer.py  utils.py
streamshield/examples/schemas/: prescription_order.py
streamshield/streamshield/: __init__.py  config.py
streamshield/streamshield/auth/: gcp.py
streamshield/streamshield/consumer/: consumer.py  dlq.py
streamshield/streamshield/dlp/: detokenizer.py  policy.py  tokenizer.py
streamshield/streamshield/errors/: exceptions.py
streamshield/streamshield/observability/: logging.py  metrics.py
streamshield/streamshield/producer/: producer.py
streamshield/streamshield/schema/: deserializer.py  models.py  registry.py  serializer.py
streamshield/streamshield/topic/: admin.py
streamshield/tests/fixtures/schemas/: prescription_order.json
streamshield/tests/integration/: conftest.py  test_async_integration.py  test_consumer_integration.py  test_dlq_integration.py  test_end_to_end_integration.py  test_producer_integration.py  test_schema_registry_integration.py  test_schema_validation_integration.py  test_topic_admin_integration.py
streamshield/tests/unit/: test_config.py  test_dlp.py  test_serializer.py
terraform/: APPLY-GUIDE.md  apis.tf  compute.tf  iam.tf  kafka.tf  kms.tf  networking.tf  outputs.tf  providers.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf
